tests/build/cases/widget/new_fns_cannot_be_unsafe.stderr
error: `new` cannot be `unsafe`
 --> cases/widget/new_fns_cannot_be_unsafe.rs:7:5
  |
7 |     unsafe fn new(child: impl UiNode, id: impl IntoValue<WidgetId>) -> impl UiNode {
  |     ^^^^^^

error: `new_child` cannot be `unsafe`
  --> cases/widget/new_fns_cannot_be_unsafe.rs:10:5
   |
10 |     unsafe fn new_child() -> NilUiNode {
   |     ^^^^^^
